--- a/config/model_config_chatgpt.json
+++ b/config/model_config_chatgpt.json
@@ -2,5 +2,7 @@
     "use_gpu": false,
     "load_w_llama_cpp": false,
     "use_remote_model": true,
-    "remote_model_source": "ChatGPT"
+    "remote_model_source": "OpenAI",
+    "remote_model_name": "ChatGPT",
+    "remote_model_version": "o1"
 }
