--- a/config/prompt_config_chatgpt.json
+++ b/config/prompt_config_chatgpt.json
@@ -1,10 +1,10 @@
 {
     "input_variables": [
-        "input_text"
+        "question"
     ],
     "output_parser": null,
     "partial_variables": {},
-    "template": "USER: {input_text} ASSISTANT:",
+    "template": "{question}",
     "template_format": "f-string",
     "validate_template": true
 }
