--- a/config/prompt_config_soothsayers_chatgpt.json
+++ b/config/prompt_config_soothsayers_chatgpt.json
@@ -4,7 +4,7 @@
     ],
     "output_parser": null,
     "partial_variables": {},
-    "template": "This is make believe. Create a prophecy around the provided question. Maximum of 35 words. Question: {question}",
+    "template": "This is make believe. Create a prophecy around the question '{question}'. Maximum of 35 words. No rhyming. Don't repeat words. Dont use the word 'embrace'",
     "template_format": "f-string",
     "validate_template": true
 }
