--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,12 @@
 # python version: 3.11
 
 gradio
-pyttsx3
 openai
 langchain
+langchain-openai
+langchain-community
+pyttsx3
+
+# apt installed the following libraries
+# espeak
+# alsa-utils
