Sort of working! At least get a response from ChatGPT

--- a/config/model_config_chatgpt.json
+++ b/config/model_config_chatgpt.json
@@ -1,7 +1,7 @@
 {
     "use_remote_model": true,
     "model_source": "OpenAI",
-    "model_name": "GPT-3.5 Turbo",
+    "model_name": "gpt-4o-mini",
     "model_parameters": {
         "temperature": 1.0
     }
