--- a/config/response_config_default.json
+++ b/config/response_config_default.json
@@ -3,5 +3,6 @@
     "response_pause_time": 0,
     "response_stream_lag_time": 0.1,
     "use_mac_os_speech": false,
+    "voice_name": "Microsoft David Desktop - English (United States)",
     "speech_rate_wpm": 180
 }
