--- a/config/model_config_chatgpt_default.json
+++ b/config/model_config_chatgpt_default.json
@@ -1,7 +1,7 @@
 {
     "use_remote_model": true,
     "model_source": "OpenAI",
-    "model_name": "gpt-4o-mini",
+    "model_name": "gpt-4o",
     "model_parameters": {
         "temperature": 1.0
     }
