--- a/config/theme_config_default.json
+++ b/config/theme_config_default.json
@@ -1,4 +1,7 @@
 {
+    "app_name": "LLM Chat",
+    "chat_placeholder_text": "Please ask me a question.",
+    "textbox_placeholder_text": "Please ask me a question.",
     "source_theme": "soft",
     "load_theme_from_hf_hub": false
 }
