--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-# python version: 3.11
+# python version: 3.11.10
 
-gradio
-openai
-langchain
-langchain-openai
-langchain-community
-langchain-ollama
-pyttsx3
+gradio==5.7.1
+openai==1.56.1
+langchain==0.3.9
+langchain-openai==0.2.10
+langchain-community==0.3.9
+langchain-ollama==0.2.1
+pyttsx3==2.98
