--- a/.gitignore
+++ b/.gitignore
@@ -124,12 +124,18 @@ celerybeat.pid
 
 # Environments
 .env
+.env.local
 .venv
-env/
 venv/
 ENV/
 env.bak/
 venv.bak/
+
+# Environment files with API keys (but keep example templates)
+*.env
+!.env.example
+env/**/*.env
+!env/**/*.env.example
 
 # Spyder project settings
 .spyderproject
