--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 # python version: 3.11.10
 
+# Core dependencies
 gradio==5.31.0
 openai==1.56.1
 langchain==0.3.9
@@ -7,3 +8,7 @@ langchain-openai==0.2.10
 langchain-community==0.3.27
 langchain-ollama==0.2.1
 pyttsx3==2.98
+
+# Testing dependencies
+pytest==8.3.4
+pytest-cov==6.0.0
